syntax = "proto3";
package pkg.pr12er;

option go_package = "github.com/codingpot/server/pkg/pr12er";

message MetadataDump { repeated Metadata metadata = 1; }

message Metadata {
  int32 id = 1;
  string title = 2;
  repeated PaperMetadata paper_metadata = 3;
  repeated VideoMetadata video_metadata = 4;
  repeated string keywords = 5;
  string presenter = 6;
}

message PaperMetadata {
  string url = 1;
  repeated string authors = 2;
}

message VideoMetadata { string url = 1; }